[+] Classes bitmaps and reference vectors visualization feature